--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,9 @@
-site_name: My Docs
+site_name: CASVA50 Team Documentation
+
+nav:
+    - Home: index.md
+    - Line detection: line_detection.md
+    - Traffic sign: traffic_sign.md
 
 theme:
   name: material
