update pages name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: CASVA50 Team Documentation
 nav:
     - Home: index.md
     - 'Line detection': line_detection.md
-    - 'Traffic sign': traffic_sign.md
+    - 'Traffic sign': traffic_signs.md
 
 theme:
   name: material
